# 30-dias-de-c

./: CMakeLists.txt  README.md
include/: expected_output.hpp  temporary_output.hpp
include/tests/: expected_io.hpp  expected_output.hpp  number_utils.hpp  result.hpp  temporary_file.hpp  test_file.hpp
include/utils/: string_utils.h
solution/: CMakeLists.txt
solution/1.helloworld/: CMakeLists.txt
solution/1.helloworld/src/: helloworld.c  helloworld.h
solution/1.helloworld/tests/: helloworld.cpp
solution/10.triangulo_de_pascal/: CMakeLists.txt
solution/11.funcionarios/: CMakeLists.txt
solution/12.array_dinamico/: CMakeLists.txt
solution/13.1.A_biblioteca_do_Sr._Chiyoku/: CMakeLists.txt
solution/13.read_arq/: CMakeLists.txt
solution/2.oi/: CMakeLists.txt
solution/2.oi/src/: oi.c  oi.h
solution/2.oi/tests/: oi.cpp
solution/3.variables/: CMakeLists.txt
solution/3.variables/src/: variables.c  variables.h
solution/4.pode_beber/: CMakeLists.txt
solution/4.pode_beber/src/: pode_beber.c  pode_beber.h
solution/4.pode_beber/tests/: pode_beber.cpp
solution/5.looooping/: CMakeLists.txt
solution/6.velocidade/: CMakeLists.txt
solution/7.1.Extra.salario/: CMakeLists.txt
solution/7.2.Extra-pontos/: CMakeLists.txt
solution/7.calculadora/: CMakeLists.txt
solution/8.1.Extra-iguais/: CMakeLists.txt
solution/8.media_notas/: CMakeLists.txt
solution/9.piramide_numeros/: CMakeLists.txt
src/: CMakeLists.txt
src/solution/: CMakeLists.txt
src/solution/1.helloworld/: CMakeLists.txt
src/solution/1.helloworld/src/: helloworld.h  main.c
src/solution/1.helloworld/tests/: helloworld.cpp
src/solution/2.oi/: CMakeLists.txt
src/solution/2.oi/src/: main.c  oi.c  oi.h
src/solution/2.oi/tests/: oi.cpp
src/solution/3.variables/: CMakeLists.txt
src/solution/3.variables/src/: main.c
src/solution/4.pode_beber/: CMakeLists.txt
src/solution/4.pode_beber/src/: main.c  pode_beber.c  pode_beber.h
src/solution/4.pode_beber/tests/: pode_beber.cpp
src/solution/5.looooping/: CMakeLists.txt
src/solution/5.looooping/src/: looooping.c  looooping.h  main.c
src/solution/5.looooping/tests/: looooping.cpp
src/solution/6.velocidade/: CMakeLists.txt
src/solution/6.velocidade/src/: main.c  velocidade.c  velocidade.h
src/solution/6.velocidade/tests/: velocidade.cpp
src/solution/7.1.Extra.salario/: CMakeLists.txt
src/solution/7.1.Extra.salario/src/: main.c  salario.c  salario.h
src/solution/7.1.Extra.salario/tests/: salario.cpp
src/solution/7.2.Extra-pontos/: CMakeLists.txt
src/solution/7.2.Extra-pontos/src/: main.c  pontos.c  pontos.h
src/solution/7.2.Extra-pontos/tests/: pontos.cpp
src/solution/7.calculadora/: CMakeLists.txt
src/solution/7.calculadora/src/: calculadora.c  calculadora.h  main.c  operations.c  operations.h
src/solution/7.calculadora/tests/: calculadora.cpp
src/solution/8.media_notas/: CMakeLists.txt
src/solution/8.media_notas/src/: main.c  media_notas.c  media_notas.h
src/solution/8.media_notas/tests/: media_notas.cpp
src/utils/: CMakeLists.txt
src/utils/src/: string_utils.c
src/utils/tests/: string_utils.cpp
