cmake_minimum_required(VERSION 3.13)

add_subdirectory("1.helloworld")
add_subdirectory("2.oi")
add_subdirectory("3.variables")
# add_subdirectory("4.pode_beber")
# add_subdirectory("5.looooping")
# add_subdirectory("6.velocidade")
# add_subdirectory("7.calculadora")
# add_subdirectory("7.1.Extra.salario")
# add_subdirectory("7.2.Extra-pontos")
# add_subdirectory("8.media_notas")
# add_subdirectory("8.1.Extra-iguais")
# add_subdirectory("9.piramide_numeros")
# add_subdirectory("10.triangulo_de_pascal")
# add_subdirectory("11.funcionarios")
# add_subdirectory("12.array_dinamico")
# add_subdirectory("13.read_arq")
# add_subdirectory("13.1.A_biblioteca_do_Sr._Chiyoku")
